--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,361 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
+  <link type="text/css" href="http://bootstrap-material.fusetheme.com/assets/icons/fuse-icon-font/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <style>
+    .invalid-feedback {
+        color: #dc3545;
+    }
+    .MuiFormHelperText-contained{
+        margin-left: 0px !important;
+    }
+    body{
+        font-size: 14px;
+        height: 100%;
+    }
+    .text-material-color{
+        color: #3f51b5 !important
+    }
+    .d-flex{
+        display: flex;
+    }
+    .justify-content-center{
+        justify-content: center;
+    }
+    .text-white{
+        color: white;
+    }
+    .text-black{
+        color: black;
+    }
+    .text-blue{
+        color: #0d84f2;
+    }
+    .mt-1{
+        margin-top: 1rem;
+    }
+    .mt-2{
+        margin-top: 2rem;
+    }
+    .mt-3{
+        margin-top: 3rem;
+    }
+    .mt-4{
+        margin-top: 4rem;
+    }
+    .mt-5{
+        margin-top: 5rem;
+    }
+    .mb-1{
+        margin-bottom: 1rem;
+    }
+    .mb-2{
+        margin-bottom: 2rem;
+    }
+    .mb-3{
+        margin-bottom: 3rem;
+    }
+    .mb-4{
+        margin-bottom: 4rem;
+    }
+    .mb-5{
+        margin-left: 5rem;
+    }
+    .ml-1{
+        margin-left: 1rem;
+    }
+    .ml-2{
+        margin-left: 2rem;
+    }
+    .ml-3{
+        margin-left: 3rem;
+    }
+    .ml-4{
+        margin-left: 4rem;
+    }
+    .ml-5{
+        margin-left: 5rem;
+    }
+    .makeStyles-avatar-2{
+        background-color: #3f51b5 !important ;
+    }
+    .makeStyles-avatar-11{
+        background-color: #3f51b5 !important ;
+    }
+    .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline{
+        border-color: #3f51b5 !important;
+    }
+    .css-2b097c-container{
+        width: 164px;
+    }
+    .css-1okebmr-indicatorSeparator{
+        background-color: transparent !important;
+    }
+    .css-yk16xz-control{
+        border-color: transparent !important;
+        outline: 0 !important;
+    }
+    .css-tlfecz-indicatorContainer{
+        display: none !important;
+    }
+    .w-100{
+        width: 100%;
+    }
+    .MuiInput-underline:before{
+        border-bottom: solid 0px #fff !important;
+    }
+    .MuiSelect-icon{
+        color: #fff !important;
+    }
+    .MuiSelect-select.MuiSelect-select{
+        color: #fff !important;
+        font-size: 16px;
+        font-weight: 600;
+        font-family: inherit;
+    }
+    .MuiMenuItem-root{
+        font-weight: 600 !important;
+        font-size: 16px !important;
+        font-family: inherit !important;
+    }
+    .MuiSelect-select:focus{
+        background-color: transparent !important;
+    }
+    .MuiInput-underline:after{
+        border-bottom: solid 2px transparent !important;
+    }
+    .MuiSelect-icon{
+        top: calc(50% - 21px) !important;
+    }
+    .MuiSvgIcon-root{
+        width: 3rem !important;
+        height: 3rem !important;
+    }
+    .MuiList-root{
+        max-height: 300px !important;
+    }
+    .fs-14{
+        font-size: 14px;
+    }
+    .fs-16{
+        font-size: 16px;
+    }
+    .fs-18{
+        font-size: 18px;
+    }
+    .fs-20{
+        font-size: 20px;
+    }
+    .fs-22{
+        font-size: 22px;
+    }
+    .fs-24{
+        font-size: 24px;
+    }
+    .fs-26{
+        font-size: 26px;
+    }
+    .canvas-container {
+        height: 60vh;
+    }
+    canvas { 
+        padding: 15px;
+    }
+    .mt-1px{
+        margin-top: 1px;
+    }
+    .mt-2px{
+        margin-top: 2px;
+    }
+    .mt-3px{
+        margin-top: 3px;
+    }
+    .mt-4px{
+        margin-top: 4px;
+    }
+    .mt-5px{
+        margin-top: 5px;
+    }
+    .mt-6px{
+        margin-top: 6px;
+    }
+    .mt-7px{
+        margin-top: 7px !important;
+    }
+    .pointer{
+        cursor: pointer;
+    }
+    @keyframes customEnterAnimation {
+        0% {
+            transform: scale(0);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @keyframes customLeaveAnimation {
+        0% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(0);
+        }
+    }
+    .react-responsive-modal-overlay{
+        top: 53px !important; 
+    }
+    .modal-title{
+        background-color: #3c3c3c;
+        opacity: 0.9;
+        color: #fff;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
+    }
+    .modal-title div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.2rem !important;
+    }
+    .modal-title h5{
+        margin: 0 auto;
+        font-weight: bold;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+    .footer-actions{
+        display: block;
+        margin: 0 auto;
+        text-align: center;    
+        height: 10%;
+        color: #fff;
+        background: #cdd2da;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
+    }
+    .modal-body{
+        padding: 0px !important;
+    }
+    .react-responsive-modal-modal{
+        width: 440px;
+        height: 552px;
+        max-height: 552px;
+        border-radius: 6px;
+        background-color: #fff !important;
+        padding: 0px !important;
+        margin: 0 auto !important;
+    }
+    .react-responsive-modal-closeButton{
+        outline: 0;
+        display: none !important;
+    }
+    .fw-600{
+        font-weight: 600;
+    }
+    .fw-500{
+        font-weight: 500;
+    }
+    .MuiTypography-body1{
+        font-size: 15px !important;
+    }
+    .search-bar{
+        padding-left: 12px !important;
+        padding-right: 25px !important;
+        width: 100%;
+        padding-top: 5px;
+        border-radius: 23px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        padding-bottom: 5px;
+        border: solid 1px #cdd2da !important;
+    }
+    .search-magnify{
+        position: absolute;
+        right: 0;
+        margin-top: 4px;
+    }
+    .search-heading{
+        background: #ffff;
+        border-bottom: solid 1px #cdd2da;
+        position: relative;
+        width: 100%;
+    }
+    .contentCenter{
+        margin: 0 auto;
+    }
+    .chip{
+        display: inline-block;
+        height: 32px;
+        font-size: 13px;
+        font-weight: 500;
+        color: rgba(0,0,0,0.6);
+        line-height: 32px;
+        padding: 0 12px;
+        border-radius: 16px;
+        background-color: #e4e4e4;
+        margin-bottom: 5px;
+        margin-right: 5px;
+    }
+    .chip .close {
+        cursor: pointer;
+        float: right;
+        font-size: 16px;
+        line-height: 32px;
+        padding-left: 8px;
+    }
+    .chips{
+        position: absolute;
+        z-index: 9999;
+        width: 100%;
+        background: #ffff;
+        border-bottom: solid 1px #cdd2da;
+    }
+    .my-node-enter {
+        opacity: 0;
+    }
+    .my-node-enter-active {
+        opacity: 1;
+        transition: opacity 200ms;
+    }
+    .my-node-exit {
+        opacity: 1;
+    }
+    .my-node-exit-active {
+        opacity: 0;
+        transition: opacity 200ms;
+    }
+    .react-responsive-modal-overlay{
+        opacity: 0.9;
+    }
+    .fs-25{
+        font-size: 25px;
+    }
+    .ion-page{
+      padding: 100px;
+    }
+    .item-native{
+      padding-left: 0px !important;
+    }
+    .p-100px{
+        padding: 100px;
+    }
+    .pl-0{
+        padding: 0px;
+    }
+</style>
 </head>
 
 <body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 
